--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,9 +29,9 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.version=v{{.Version}}
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.commit={{.Commit}}
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.date={{.Date}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Version=v{{.Version}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Commit={{.Commit}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Date={{.Date}}
 
   - id: osx
     goos:
@@ -42,9 +42,9 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.version=v{{.Version}}
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.commit={{.Commit}}
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.date={{.Date}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Version=v{{.Version}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Commit={{.Commit}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Date={{.Date}}
 
   - id: windows
     goos:
@@ -55,9 +55,9 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.version=v{{.Version}}
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.commit={{.Commit}}
-      - -s -w -X github.com/alvinunreal/tmuxai/cmd.date={{.Date}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Version=v{{.Version}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Commit={{.Commit}}
+      - -s -w -X github.com/alvinunreal/tmuxai/internal.Date={{.Date}}
 
 archives:
   - name_template: >-
