--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,9 +29,9 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Version=v{{.Version}}
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Commit={{.Commit}}
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Date={{.Date}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Version=v{{.Version}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Commit={{.Commit}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Date={{.Date}}
 
   - id: osx
     goos:
@@ -42,9 +42,9 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Version=v{{.Version}}
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Commit={{.Commit}}
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Date={{.Date}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Version=v{{.Version}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Commit={{.Commit}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Date={{.Date}}
 
   - id: windows
     goos:
@@ -55,9 +55,9 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Version=v{{.Version}}
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Commit={{.Commit}}
-      - -s -w -X github.com/alvinunreal/tmuxai/internal.Date={{.Date}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Version=v{{.Version}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Commit={{.Commit}}
+      - -s -w -X github.com/sigrunnr/tmuxai/internal.Date={{.Date}}
 
 archives:
   - name_template: >-
@@ -86,10 +86,10 @@ changelog:
 brews:
   - name: tmuxai
     repository:
-      owner: alvinunreal
+      owner: sigrunnr
       name: homebrew-tmuxai
     commit_author:
-      name: alvinunreal
+      name: sigrunnr
       email: alvin@tmuxai.dev
     directory: Formula
     dependencies:
@@ -101,7 +101,7 @@ brews:
 
 nfpms:
   - file_name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
-    maintainer: alvinunreal
+    maintainer: sigrunnr
     homepage: https://tmuxai.dev
     description: AI-Powered, Non-Intrusive Terminal Assistant
     license: "Apache-2.0"
