Correct name of main branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,13 +4,13 @@ on:
   workflow_dispatch:
     push:
     branches:
-      - master
+      - main
     tags:
       - rc*
       - v*
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
